# magpy

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  manage.py  pyproject.toml  pytest.ini  tests-open.js
api/: models.py  serializers.py
api/integrations/: abstract_method.py  client.py
api/migrations/: 0001_initial.py
api/test/: conftest.py  urls.py
api/test/_factories/: __init__.py  package_release.py  project.py
api/test/integration/client/: test_abstract.py  test_client.py
api/test/integration/client/cassettes/test_client/: test_pypi_package_metadata.yaml  test_pypi_package_metadata_by_version.yaml  test_pypi_package_metadata_by_version_not_found.yaml  test_pypi_package_metadata_not_found.yaml
api/test/unit/: test_admin.py  test_models.py
api/usercases/: abstract_method.py  parse_package.py
magpy/: settings.py  urls.py
